fixed wrapping issue

--- a/TBCXUSAID/tbc_x_usaid.css
+++ b/TBCXUSAID/tbc_x_usaid.css
@@ -29,7 +29,7 @@ a{
     min-width: 150px;
     width: 100%;
 }
-.distanced {
+.centered {
     width: 75%;
     max-width: 980px;
     background-color: violet;
@@ -87,7 +87,6 @@ a{
 #team-image-motto-container{
     min-width: 980px;
     width: 100%;
-    height: 352px;
     min-height: 352px;
     display: flex;
     align-items: center;
@@ -102,6 +101,7 @@ a{
     position: absolute;
     height: auto;
     min-height: 352px;
+    height: 352px;
     overflow-x: hidden;
     object-fit: cover;
     object-position: 50% 50%;
@@ -110,6 +110,7 @@ a{
 }
 .description-text{
     color: white;
+    min-width: 980px;
 }
 #team-motto-text-container{
     min-width: 980px;
